--- a/apache-install/index.html
+++ b/apache-install/index.html
@@ -2,6 +2,6 @@
   <head><title></title>
   </head>
 <body>
-  <h2>Welcome to my Ansible managed node, <p>This webserver created by Jenkins and provided by Amazon.</p></h2> 
+  <h2>Welcome to my Ansible managed node, <h4>This webserver created by Jenkins and provided by Amazon.</h4></h2> 
 </body>
 </html>
